--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,7 @@ Description: Climate stripes plots
 License: GPL2
 Encoding: UTF-8
 LazyData: true
+Depends:
+    mgcv,
+    scales
 RoxygenNote: 6.1.1
