--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,6 @@ Encoding: UTF-8
 LazyData: true
 Depends:
     mgcv,
-    scales
-RoxygenNote: 6.1.1
+    scales,
+    data.table
+RoxygenNote: 7.1.1
